Changelog
=========

1.0.3 (unreleased)
-----

- Focuses on first input when switching tabs in wizard forms

1.0.2
-----

- Fixes crash in JSON Encoder 

1.0.1
-----

- Fixes some tiny issues

1.0
-------------------

- Initial release